--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@splidejs/splide": "^4.1.4",
     "axios": "^1.7.7",
     "firebase": "^10.13.1",
+    "framer-motion": "^11.5.4",
     "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
