--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "axios": "^1.7.7",
+    "copy-to-clipboard": "^3.3.3",
     "firebase": "^10.13.1",
     "framer-motion": "^11.5.4",
     "next": "^14.2.7",
